--- a/css/base.css
+++ b/css/base.css
@@ -1,23 +1,3 @@
-/* Scale major third
-––––––––––––––––––––––––––––––––– */
-
-/*
-3.815rem
-3.052rem
-2.441rem
-1.953rem
-1.563rem
-1.25rem
-1rem
-0.8rem
-0.64rem
-0.512rem
-0.41rem
-0.328rem
-0.262rem
-0.209rem
-*/
-
 /* Root
 ––––––––––––––––––––––––––––––––– */
 :root {
@@ -76,7 +56,7 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "avenir next", avenir, "helvetica neue", helvetica, ubuntu, roboto, noto, "segoe ui", arial, sans-serif;
   margin: 0;
   padding: 0;
-  text-decoration-skip-ink: "auto";
+  text-decoration-skip-ink: auto;
 }
 
 body {
@@ -91,7 +71,7 @@ body {
 
 img {
   display: block;
-  max-width: 100%;
+  max-width: 65%;
   height: auto;
 }
 
@@ -169,276 +149,6 @@ a {
   }
 }
 
-a:focus-visible {
-  box-shadow: 0 0 0 2px #5aaafa;
-  outline: none;
-}
-
-small {
-  font-size: 0.888rem;
-}
-
-hr {
-  border: 1px solid var(--input-color);
-  margin: 3.052rem 0;
-}
-
-/* Form
-    ––––––––––––––––––––––––––––––––– */
-label {
-  font-weight: bold;
-  display: flex;
-}
-
-input[type="email"],
-input[type="text"],
-input[type="number"],
-input[type="password"],
-input[type="url"],
-input[type="tel"],
-input[type="search"],
-input[type="date"],
-input[type="month"],
-input[type="day"],
-input[type="week"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="time"],
-input:not([type]) {
-  padding: 0.5rem;
-  font-size: 1rem;
-  border: 2px solid var(--input-border-color);
-  background-color: var(--input-background-color);
-  color: var(--input-color);
-  border-radius: 10px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-select {
-  -webkit-appearance: none;
-  padding: 0.5rem;
-  font-size: 1rem;
-  border: 2px solid var(--input-border-color);
-  border-radius: 10px;
-  color: var(--input-color);
-  height: 2.5rem;
-  background-color: var(--input-background-color);
-  background-image: var(--select-background-image);
-  background-repeat: no-repeat;
-  background-size: 1rem;
-  background-position: center right 0.5rem;
-}
-
-textarea {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  font-size: 1rem;
-  border: 2px solid var(--input-border-color);
-  color: var(--input-color);
-  border-radius: 10px;
-  resize: vertical;
-  background-color: var(--input-background-color);
-  box-sizing: border-box;
-  padding: 0.5rem;
-  font-family: -apple-system, BlinkMacSystemFont, "avenir next", avenir, "helvetica neue", helvetica, ubuntu, roboto, noto, "segoe ui", arial, sans-serif;
-}
-
-input:focus,
-select:focus,
-textarea:focus {
-  outline: none;
-  border: 2px solid var(--input-focus-border-color);
-}
-
-input:invalid:not(:placeholder-shown),
-select:invalid,
-textarea:invalid {
-  border: 2px solid var(--input-invalid-border-color);
-  box-shadow: none;
-}
-
-input[type="checkbox"] {
-  display: inline-block;
-  height: 1rem;
-  font-size: 1rem;
-  border-radius: 5px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border: 2px solid var(--input-checkbox-border-color);
-  width: 1rem;
-  background-color: var(--background-color);
-  align-self: center;
-  margin-right: 0.5rem;
-}
-
-input[type="checkbox"]:hover {
-  cursor: pointer;
-}
-
-input[type="checkbox"]:checked {
-  background-image: var(--checkbox-checked-url);
-  background-size: contain;
-  background-color: var(--input-color);
-  border: 2px solid var(--input-color);
-}
-
-input[type="checkbox"]:focus-visible,
-input[type="checkbox"]:checked:focus-visible {
-  border-color: var(--input-focus-border-color);
-}
-
-input[type="radio"] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border-radius: 50%;
-  border: 2px solid var(--input-checkbox-border-color);
-  height: 1rem;
-  width: 1rem;
-  margin-right: 0.5rem;
-  align-self: center;
-  justify-content: center;
-  position: relative;
-  display: flex;
-}
-
-@media (hover: hover) {
-  input[type="radio"]:hover {
-    cursor: pointer;
-  }
-}
-
-input[type="radio"]:checked {
-  border: 2px solid var(--input-color);
-}
-
-input[type="radio"]:focus-visible,
-input[type="radio"]:checked:focus-visible {
-  border-color: var(--input-focus-border-color);
-}
-
-input[type="radio"]:checked::before {
-  content: "";
-  width: calc(100% - 4px);
-  height: calc(100% - 4px);
-  background-color: var(--input-color);
-  align-self: center;
-  border-radius: 50%;
-}
-
-input[type="submit"],
-input[type="reset"],
-input[type="button"],
-button {
-  padding: 0.5rem 1.25rem;
-  font-size: 1rem;
-  border-radius: 10px;
-  background-color: var(--input-background-color);
-  border: 2px solid var(--input-border-color);
-  color: var(--input-color);
-  text-decoration: none;
-  font-weight: bold;
-  margin-bottom: 1rem;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  display: inline-block;
-  line-height: initial;
-  transition: background-color 200ms ease-in-out, border 200ms ease-in-out, transform 200ms ease-in-out;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  user-select: none;
-}
-button:disabled {
-  opacity: 0.2;
-}
-
-@media (hover: hover) {
-  input[type="submit"]:hover,
-  input[type="reset"]:hover,
-  input[type="button"]:hover,
-  button:hover {
-    cursor: pointer;
-  }
-}
-
-button:focus-visible,
-input[type="submit"]:focus-visible,
-input[type="reset"]:focus-visible,
-input[type="button"]:focus-visible {
-  border-color: var(--input-focus-border-color);
-  outline: none;
-}
-
-/* Tables
-    ––––––––––––––––––––––––––––––––– */
-table {
-  width: 100%;
-  border-spacing: 0;
-  margin-bottom: 1.563rem;
-  font-variant-numeric: tabular-nums;
-}
-
-th,
-td {
-  padding: 0.5rem 0.5rem 0.5rem 0;
-  margin: 0;
-}
-
-th {
-  font-weight: bold;
-  text-align: left;
-  border-bottom: 2px solid var(--table-border-color);
-  color: var(--table-header-color);
-}
-
-td {
-  border-bottom: 2px solid var(--table-border-color);
-}
-
-/* Code
-    ––––––––––––––––––––––––––––––––– */
-code {
-  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  font-size: 0.8rem;
-  white-space: nowrap;
-  background: var(--input-background-color);
-  padding: 0 0.328rem;
-  display: inline-block;
-  vertical-align: middle;
-  border-radius: 10px;
-}
-
-p > code {
-  white-space: normal;
-}
-
-pre > code {
-  line-height: 1.563em;
-  display: block;
-  padding: 1rem;
-  white-space: pre;
-  margin-bottom: 1.563rem;
-  overflow: scroll;
-}
-
-/* Forces a new-line at the end of a code block for layout purposes. */
-pre > code::after {
-  content: " ";
-}
-
-/* Blockquote
-    ––––––––––––––––––––––––––––––––– */
-blockquote {
-  border-left: 0.25rem solid var(--input-border-color);
-  padding: 0 1rem;
-  margin-bottom: 1.563rem;
-}
-
 /* List
     ––––––––––––––––––––––––––––––––– */
 ul {
@@ -465,43 +175,4 @@ li {
 
 dd {
   margin-left: 1rem;
-}
-/* Keyboard
-    ––––––––––––––––––––––––––––––––– */
-kbd {
-  display: inline-block;
-  padding: 0 0.328rem;
-  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  font-size: 0.64rem;
-  color: var(--kbd-color);
-  vertical-align: middle;
-  background-color: var(--kbd-background-color);
-  border: solid 1px var(--kbd-border-color);
-  border-bottom: solid 2px var(--kbd-border-bottom-color);
-  border-radius: 5px;
-}
-
-/* Abbreviation
-    ––––––––––––––––––––––––––––––––– */
-abbr {
-  text-decoration: none;
-  border-bottom: 2px dashed var(--abbr-border-bottom-color);
-}
-
-@media (hover: hover) {
-  abbr:hover {
-    cursor: help;
-  }
-}
-
-/* Details
-    ––––––––––––––––––––––––––––––––– */
-details > summary:focus {
-  box-shadow: 0 0 0 2px var(--input-focus-border-color);
-  outline: none;
-  border-radius: 5px;
-}
-
-details > summary:hover {
-  cursor: pointer;
 }
